<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:layout_marginTop="16dp"
                tools:showIn="@layout/activity_main">

    <TextView android:id="@+id/label_card"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="24dp"
              android:textSize="24sp"
              android:textColor="@android:color/black"
              android:text="@string/cards"/>

    <TextView android:id="@+id/add_new"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_marginRight="24dp"
              android:textSize="12sp"
              android:textColor="@android:color/black"
              android:drawableRight="@drawable/ic_add_black_24dp"
              android:text="@string/add_new"/>

    <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="wrap_content"
            android:layout_below="@+id/label_card"
            android:layout_height="200dp"/>

    <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dots_height"
            android:layout_below="@+id/view_pager"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal"/>

    <TextView android:id="@+id/transaction"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/layoutDots"
              android:layout_marginLeft="24dp"
              android:textSize="24sp"
              android:textColor="@android:color/black"
              android:text="@string/transaction"/>

    <TextView android:id="@+id/menu"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/layoutDots"
              android:layout_alignParentRight="true"
              android:layout_marginRight="24dp"
              android:textSize="24sp"
              android:textColor="@android:color/black"
              android:text="..."/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/transaction_list"
            android:layout_width="match_parent"
            android:layout_below="@+id/transaction"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:scrollbars="vertical"
            android:layout_marginTop="8dp">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>