<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                tools:showIn="@layout/activity_account"
                tools:context=".AccountActivityFragment"
                android:layout_marginTop="16dp">

    <TextView android:id="@+id/label_card"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="24dp"
              android:textSize="24sp"
              android:textColor="@android:color/black"
              android:text="@string/accounts"/>

    <TextView android:id="@+id/add_new"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_marginRight="24dp"
              android:textSize="12sp"
              android:textColor="@android:color/black"
              android:drawableRight="@drawable/ic_add_black_24dp"
              android:text="@string/add_new"/>

    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_below="@+id/label_card"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:elevation="16dp"
            card_view:cardElevation="8dp"
            card_view:cardCornerRadius="4dp">

        <RelativeLayout android:layout_below="@+id/label_card"
                        android:id="@+id/pro_view"
                        android:layout_width="match_parent"
                        android:background="@drawable/account_bg"
                        android:layout_height="150dp">

            <TextView android:id="@+id/label_pro"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="24dp"
                      android:layout_marginTop="24dp"
                      android:textSize="12sp"
                      android:paddingLeft="16dp"
                      android:paddingRight="16dp"
                      android:paddingBottom="4dp"
                      android:paddingTop="4dp"
                      android:fontFamily="sans-serif-medium"
                      android:textStyle="normal"
                      android:textColor="#7e8eaa"
                      android:text="@string/pro"
                      android:gravity="center"
                      android:background="@drawable/pro_bg"
                      android:elevation="16dp"/>

            <TextView android:id="@+id/label_upgrade"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      android:layout_marginBottom="24dp"
                      android:layout_marginLeft="24dp"
                      android:textSize="24sp"
                      android:textColor="@android:color/white"
                      android:text="@string/upgrade_your_account"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/ic_arrow_forward"
                       android:layout_alignParentBottom="true"
                       android:layout_alignParentRight="true"
                       android:layout_marginBottom="24dp"
                       android:layout_toRightOf="@+id/label_upgrade"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/wallet_list"
            android:layout_width="match_parent"
            android:layout_below="@+id/card_view"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginTop="8dp"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:layout_marginBottom="8dp">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
